builder/src/styles/components.css
/* ... */
.btn:active {
  background: #ffffff;
  /* Solid Colours/Brand/Primary/Primary-400 */

  border: 1px solid #a673ef;
  /* State/Primary Focus */

  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.12), 0px 0px 0px 3px #dcd4ff;
}
/* .input {
  background: #FFFFFF;
  Solid Colours/Brand/Gray/Gray-400

  border-color: #e2e4e8;
  border-radius: 3px;
} */

/* .input:focus-visible {
  border: 1px solid #8247e5 !important;
  outline: none;
  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.12), 0px 0px 0px 1px #dcd4ff;
} */

.color-span {
  width: 1.5rem;
  height: 1.5rem;
  margin-left: 2rem;
}

.container-drag {
  position: relative;
}

#drag {
  border: 1px solid rgba(75, 67, 121, 0.1);
}
#drag:hover {
  background: #e3d3ff;
  border: 1px solid transparent;
}
#add-img {
  border: 1px solid rgba(75, 67, 121, 0.1);
}
#add-img:hover {
  background: #e3d3ff;
  border: 1px solid transparent;
}
#edit-img {
  border: 1px solid rgba(75, 67, 121, 0.1);
}
#edit-img:hover {
  background: #e3d3ff;
  border: 1px solid transparent;
}
#delete-img {
  border: 1px solid rgba(75, 67, 121, 0.1);
}
#delete-img:hover {
  background: #e3d3ff;
  border: 1px solid transparent;
}
.container-drag #add-img {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  top: 0.5rem;
  right: 4.9rem;
  opacity: 0;
  transition: opacity 0.2s;
}
.container-drag:hover #add-img {
  visibility: visible;
  opacity: 1;
}
.container-drag #edit-img {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  top: 0.5rem;
  right: 2.7rem;
  opacity: 0;
  transition: opacity 0.2s;
}
.container-drag #delete-img {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  top: 0.5rem;
  right: 2.7rem;
  opacity: 0;
  transition: opacity 0.2s;
}
.container-drag:hover #delete-img {
  visibility: visible;
  opacity: 1;
}
.container-drag:hover #edit-img {
  visibility: visible;
  opacity: 1;
}
.container-drag #drag {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  top: 0.5rem;
  right: 0.5rem;
  opacity: 0;
  transition: opacity 0.2s;
}

.container-drag:hover #drag {
  visibility: visible;
  opacity: 1;
}

/* hide scrollbar */
.example::-webkit-scrollbar {
  display: none;
}
.react-grid-item > .react-resizable-handle.react-resizable-handle-e {
  visibility: hidden;
}

.react-grid-item > .react-resizable-handle.react-resizable-handle-se {
  visibility: hidden;
}
.react-grid-item > .react-resizable-handle.react-resizable-handle-e::after {
  height: 10px;
  width: 10px;
  border-right: 2px solid;
  border-bottom: 2px solid;
}
.icon-div {
  transition: 2s;
}
.icon-div:hover .side-icon{
  background: linear-gradient(195.4deg, rgba(208, 230, 255, 0.28) 10.8%, rgba(222, 130, 255, 0.28) 163.89%);
}
.icon-div:hover .side-text{
  color: #100F11;
}
.icon-div:hover .element-svg{
  stroke: #6560E6;
}
.side-icon {
  background: rgba(164, 179, 255, 0.1);
}

.side-text {
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 14px;
  text-align: center;
  color: #504f82;
}
.element-div {
  background: linear-gradient(
    93.43deg,
    rgba(70, 143, 228, 0.06) 19.42%,
    rgba(119, 66, 231, 0.06) 63.9%
  );
  border-radius: 8px;
  margin: 1rem 1rem 2.2rem 1rem;
  padding: 2rem 0.3rem;
  justify-items: center;
  display: flex;
  align-items: center;
  align-content: center;
  width: 285px;
}
.setting-text {
  /* font-family: Roboto; */
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 14px;
  /* identical to box height */

  color: #100f11;
}
.align-div {
  background: #e9edfd;
  border-radius: 5px;
}
.margin-text {
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 14px;
  /* identical to box height */

  color: #100f11;
}
.font-text {
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 14px;
  /* identical to box height */

  color: #000000;

  opacity: 0.6;
  /* identical to box height */
  z-index: 10;
  margin-left: 0.5rem;
  margin-top: 0.6rem;
  position: absolute;
}
.border-hover:hover {
  border: 1px solid;
  border-image-source: linear-gradient(93.43deg, #468fe4 19.42%, #7742e7 63.9%);
  border-image-slice: 1;
}
/* .dashed-border:hover::before {
  content: "";
  position: absolute;
  border: 1px dashed #FF0000;
  top: -0.4px;
  bottom: -0.2px;
  left: -0.4px;
  right: -0.4px;
} */

.newbar {
  background: #fdfdff;
  z-index: 1 !important;
  border-right: 0.75px solid rgba(72, 72, 135, 0.1);
  -webkit-animation-name: slideOut !important;
  animation-name: slideOut !important;
  animation-duration: 0.3s;
}
.newbar::-webkit-scrollbar {
  width: 0 !important;
}
/*
.animate__fadeIn {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
} */
.sidebar {
  background: #fdfdff;
  z-index: 1 !important;
  border-right: 0.75px solid rgba(72, 72, 135, 0.1);
  -webkit-animation-name: slidein !important;
  animation-name: slidein !important;
  animation-duration: 0.3s;
  /* transition: 0.8s ease; */
}

.sidebar::-webkit-scrollbar {
  width: 0 !important;
}

.sidenav {
  background: #ffffff;
  z-index: 2 !important;
  border-right: 0.75px solid rgba(72, 72, 135, 0.1);
}
.setting-nav {
  background: #ffffff;
  border-left: 0.75px solid rgba(72, 72, 135, 0.1);
}
.setting-nav::-webkit-scrollbar {
  width: 0 !important;
}
.topnav {
  background: #ffffff;
  border-bottom: 0.75px solid rgba(72, 72, 135, 0.1);
}
.search {
  background: rgba(255, 255, 255, 0.5);
  border: 1px solid #dee0e9;
  color: rgba(16, 15, 17, 0.5);
}

.search::placeholder {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  /* identical to box height, or 129% */

  display: flex;
  align-items: center;

  color: rgba(16, 15, 17, 0.5);
}
.shadow-div {
  background: #e9edfd;
  border-radius: 8px;
  font-style: normal;
  font-weight: 400;
  font-size: 13px;
  line-height: 15px;

  color: #000000;
}
/* ... */

